--- a/.github/workflows/update_readme.yml
+++ b/.github/workflows/update_readme.yml
@@ -29,10 +29,11 @@ jobs:
         run: |
           python scraper.py
 
-      - name: Commit and push changes to README
+      - name: Add all changes to git
         run: |
-          git config --global user.name "GitHub Actions"
-          git config --global user.email "actions@github.com"
-          git add README.md
-          git commit -m "Update README with latest scraping results"
+          git add -A  # Ajoute tous les fichiers non suivis au suivi Git
+          git commit -m "Update README with latest scraping results" || echo "No changes to commit"
+
+      - name: Push changes to repository
+        run: |
           git push
