--- a/.github/workflows/update_readme.yml
+++ b/.github/workflows/update_readme.yml
@@ -34,6 +34,10 @@ jobs:
           git config --global user.email "your_email@example.com"
           git config --global user.name "GitHub Actions"
 
+      - name: Pull the latest changes
+        run: |
+          git pull origin main --rebase
+
       - name: Add all changes to git
         run: |
           git add -A
@@ -41,4 +45,4 @@ jobs:
 
       - name: Push changes to repository
         run: |
-          git push
+          git push origin main
