--- a/.github/workflows/update_readme.yml
+++ b/.github/workflows/update_readme.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Configure git user
         run: |
-          git config --global user.email "your_email@example.com"
+          git config --global user.email "trhacknon@proton.me"
           git config --global user.name "GitHub Actions"
 
       - name: Add all changes to git
