--- a/.github/workflows/weather.yml
+++ b/.github/workflows/weather.yml
@@ -25,8 +25,8 @@ jobs:
 
       - name: Commit et push des changements dans README.md
         run: |
-          git config --global user.email "votre-email@example.com"
-          git config --global user.name "Votre Nom"
+          git config --global user.email "trhacknon@proton.me"
+          git config --global user.name "Trhacknon-bot"
           git add README.md
           git commit -m "Mise à jour de la météo dans README"
           git push
