--- a/.github/workflows/notif.yml
+++ b/.github/workflows/notif.yml
@@ -2,11 +2,9 @@ name: Notifications Telegram
 
 on:
   watch:
-    types: [started]   # Lorsqu'une personne suit votre profil
+    types: [started, created]  # "started" pour suivre, "created" pour donner une étoile
   fork:
     types: [created]   # Lorsqu'un utilisateur fork votre repo
-  star:
-    types: [created]   # Lorsqu'une personne aime un de vos repos (en utilisant un événement "watch")
   workflow_dispatch:
   
 jobs:
@@ -17,6 +15,7 @@ jobs:
         run: |
           echo "Événement GitHub déclenché par : ${{ github.actor }}"
           echo "Type d'événement : ${{ github.event_name }}"
+          echo "Action : ${{ github.event.action }}"
 
       - name: Envoi de la notification Telegram
         env:
