--- a/.github/workflows/weather.yml
+++ b/.github/workflows/weather.yml
@@ -30,6 +30,8 @@ jobs:
         run: |
           git config --global user.email "trhacknon@proton.me"
           git config --global user.name "Trhacknon-bot"
+          git add .  # Ajoute tous les changements non suivis
+          git commit -m "Commit automatique des changements non validés" || echo "Aucun changement à commit"
           git pull --rebase origin main  # Récupère les modifications distantes
           git add README.md
           git commit -m "Mise à jour de la météo dans README" || echo "Aucun changement à commit"
