--- a/.github/workflows/weather.yml
+++ b/.github/workflows/weather.yml
@@ -28,10 +28,15 @@ jobs:
           METEO=$(python3 script_meteo.py)  # Cette commande doit retourner la météo au format texte brut
           echo "METEO=$METEO" >> $GITHUB_ENV  # Déclare METEO comme variable d'environnement
 
-      - name: Mettre à jour la section météo dans README.md
+      - name: Ajouter le contenu de READMEO.md à README.md
         run: |
-          # Remplacer la section météo dans README.md sans effacer le reste du fichier
-          sed -i '/<!-- METEO_START -->/,/<!-- METEO_END -->/c\<!-- METEO_START -->\n'"${METEO}"'\n<!-- METEO_END -->' README.md
+          # Ajouter le contenu de READMEO.md au fichier README.md tout en conservant les autres sections
+          cat READMEO.md >> README.md
+
+      - name: Ajouter la météo mise à jour à la fin de README.md
+        run: |
+          # Ajouter la météo sous le contenu existant du fichier README.md
+          echo -e "\n## Météo actuelle\n$METEO" >> README.md
 
       - name: Commit et push des changements dans README.md
         run: |
